--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta name="viewport" content="width=device with, initia=lscale" 
+    <head> <meta charset="UTF-8"> 
+        <meta name="viewport"content="width=device-width, initialscale=1.0"> 
+        <link rel="stylesheet" href="assets\style.css"> <title>Flashcards</title> 
+    </head>
+         <body>
+             <main>
+                 <section id="container"> <article class="cartao"> <div class="cartao_conteudo">
+                     <h3>Programação</h3> <div class="cartao__conteudo__pergunta"> <p>O que é JavaScript?</p>
+                     </div> <div class="cartao__conteudo__resposta"> <p> O JavaScript é uma linguagem de programação</p>
+                     </div> </div> </article> <article class=cartao"> <div class="cartao__conteudo">
+                         <h3>Programação</h3>
