--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
                  <section id="container"> <article class="cartao"> <div class="cartao_conteudo">
                      <h3>Programação</h3> <div class="cartao__conteudo__pergunta"> <p>O que é JavaScript?</p>
                      </div> <div class="cartao__conteudo__resposta"> <p> O JavaScript é uma linguagem de programação</p>
-                     </div> </div> </article> <article class=cartao"> <div class="cartao__conteudo">
+                     </div> </div> </article> <article class=cartao"> 
+                        <div class="cartao__conteudo">
                          <h3>Programação</h3>
+                        </article>
+                        <article class="cartao">
+                            <div class="cartao___conteudo">      
+                            <h3>Programação</h3>
+                            <div class="cartao__conteudo__pergunta">
+                                 <p>O que é CSS?</p>
+                                 </div>
+                                 <div class="cartao__conteudo__resposta">
+
+                                 <p>O CSS é uma linguagem de estilização</p>
+                                 </div>
+                            </div>
+                        </article>
+     
+
