--- a/index.html
+++ b/index.html
@@ -22,8 +22,26 @@
                                  <div class="cartao__conteudo__resposta">
 
                                  <p>O CSS é uma linguagem de estilização</p>
-                                 </div>
-                            </div>
+                             </div>
+                       </div>
                         </article>
-     
+                        <article class="cartao">
+                            <div class="cartao">
+                                <h3>geografia</h3>
+                                <div  class="cartao__conteudo__pergunta">
+                                    <p>Qual a capital da França?</p>
+                                    </div>
+                                    <div class="cartao__conteudo__resposta">
+                                        <p>A capital da França é Paris</p>
+                                    </div>
+                                  </div>
+                            </article>
+        </section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
+</body>
+</html>
+
 
